--- a/templates/heart.html
+++ b/templates/heart.html
@@ -38,19 +38,19 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="heart.html">Heart Disease<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="https://heart-web-api.herokuapp.com/">Heart Disease<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="kidney.html">Kidney Disease</a>
+              <a class="nav-link" href="https://heart-web-api.herokuapp.com/">Kidney Disease</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="diabetes.html">Diabetes</a>
+              <a class="nav-link" href="https://dabetes.herokuapp.com/">Diabetes</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="liver.html">Liver Diease</a>
+              <a class="nav-link" href="https://liverapi.herokuapp.com/">Liver Diease</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="cancer.html">Cancer</a>
+              <a class="nav-link" href="https://cancer-web.herokuapp.com/">Cancer</a>
             </li>
           </ul>
         </div>
