--- a/templates/heart.html
+++ b/templates/heart.html
@@ -41,7 +41,7 @@
               <a class="nav-link" href="https://heart-web-api.herokuapp.com/">Heart Disease<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="https://heart-web-api.herokuapp.com/">Kidney Disease</a>
+              <a class="nav-link" href="https://kidney-web.herokuapp.com/">Kidney Disease</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="https://dabetes.herokuapp.com/">Diabetes</a>
